--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 author:
   name             : "Your Sidebar Name"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : "Can stop trying new things"
+  location         : "Nairobi-Kenya"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            :
@@ -92,7 +92,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "zaczx"
   google_plus      :
   keybase          :
   instagram        :
