--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "zaczxT"
   vine             :
   weibo            :
   xing             :
